Fintech-istio-poc/fraud-service/kubernetes/deploy-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-service-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fraud-service
      version: fraud-v2
  template:
    metadata:
      labels:
        app: fraud-service
        version: fraud-v2
    spec:
      containers:
      - name: fraud-service
        image: shahid9741/fraud-service:v3
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: fraud-service
  ports:
  - name: http      
    port: 80        # Target port inside the pod
    targetPort: 8001  # Pod container port
    nodePort: 30080   # NodePort (Minikube access via localhost:30080)
