Fintech-istio-poc/fraud-service/kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-service
  namespace: default
  labels:
    app: fraud-service
    version: fraud-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fraud-service
  template:
    metadata:
      labels:
        app: fraud-service
        version: fraud-v1   # ✅ important for Istio telemetry
    spec:
      containers:
      - name: fraud-service
        image: shahid9741/fraud-service:v2
        ports:
        - containerPort: 8001

---
apiVersion: v1
kind: Service
metadata:
  name: fraud-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: fraud-service
  ports:
  - name: http      
    port: 80        # Target port inside the pod
    targetPort: 8001  # Pod container port
    nodePort: 30080   # NodePort (Minikube access via localhost:30080)
