Fintech-istio-poc/fraud-service/kubernetes/destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fraud-service
spec:
  host: fraud-service
  subsets:
  - name: v1
    labels:
      version: fraud-v1
  - name: v2
    labels:
      version: fraud-v2
