Fintech-istio-poc/fraud-service/kubernetes/ingress-gateway-fault-tolerance.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"   # Domain name of the external website


#Local Docker:
#Client → localhost:NodePort → Docker bridge IP (172.18.0.6) → Pod
#Browser → Host → Docker → Node → Service → Envoy → Pod


---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: transaction-vs
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway-configuration 
  http:
  - fault:
      abort:
        httpStatus: 503
        percentage:
          value: 10
    route:
    - destination:
        host: transaction-service
        port:
          number: 80
