Fintech-istio-poc/fraud-service/kubernetes/virtualservice-latency-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fraud-service
spec:
  hosts:
  - fraud-service
  http:

  # Rule 1 — Explicit match for v2 traffic
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: fraud-service
        subset: v2
      weight: 10
    fault:
      delay:
        percentage:
          value: 100
        fixedDelay: 5s

  # Rule 2 — Catch-all for everything else
  - route:
    - destination:
        host: fraud-service
        subset: v1
      weight: 90
