Fintech-istio-poc/fraud-service/kubernetes/virtualservice-latency-v3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fraud-service
  namespace: default
spec:
  hosts:
  - fraud-service.default.svc.cluster.local

  http:
  - match:
      - headers:
          x-canary:
            exact: "true"
    fault:
      delay:
        percentage:
          value: 100
        fixedDelay: 2s
    route:
      - destination:
          host: fraud-service
          subset: v2

  - route:
      - destination:
          host: fraud-service
          subset: v1
        weight: 90
      - destination:
          host: fraud-service
          subset: v2
        weight: 10
