Fintech-istio-poc/fraud-service/kubernetes/virtualservice-latency-v4 copy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fraud-service
spec:
  hosts:
  - fraud-service
  http:

  # Canary traffic (forced to v2 + delay)
  - match:
    - headers:
        x-canary:
          exact: "true"
    fault:
      delay:
        fixedDelay: 5s
        percentage:
          value: 100
    route:
    - destination:
        host: fraud-service
        subset: v2

  # Normal traffic split 90/10
  - route:
    - destination:
        host: fraud-service
        subset: v1
      weight: 90
    - destination:
        host: fraud-service
        subset: v2
      weight: 10
