Fintech-istio-poc/fraud-service/kubernetes/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fraud-service
spec:
  hosts:
  - fraud-service
  http:
  - route:
    - destination:
        host: fraud-service
        subset: v1
      weight: 90
    - destination:
        host: fraud-service
        subset: v2
      weight: 10
